Some error corrections on the design enhancements: - no scroll to top after closing the sidebar - added bottom margin to the container to be able to read all text even if the sidebar is opened (on mobile device with only one column) - changed body background color - removed green border on the left and right

--- a/strongs/static/css/newDesign.css
+++ b/strongs/static/css/newDesign.css
@@ -8,8 +8,8 @@ abbr {
 }
 
 body {
-    background-color: #5BB05B;
-    /*background-color: #f3efe1;*/
+    /*background-color: #5BB05B;*/
+    background-color: #f3efe1;
     /*color: rgb(132, 128, 114);*/
     color: #504C3D;
     /*overflow: hidden;*/
@@ -17,6 +17,7 @@ body {
     font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
     /*font-family: "Lato", "arial", "sans-serif";
     font-size: 12px;*/
+    overflow-x: hidden;
 }
 
 a, a:visited {
@@ -70,7 +71,7 @@ input:focus {
     height: 53px;
     /*float: left;*/
     z-index: 1;
-    border-bottom: 10px solid #5BB05B;
+    border-bottom: 5px solid #5BB05B;
 }
 
 .nav-ele {
@@ -116,16 +117,18 @@ input:focus {
     left: 0;
     margin-top: 63px;
     /*width: 100%;*/
-    height: 100%;
+    height: auto;
     overflow: hidden;
     background-color: rgba(255,255,255,.95);
     background-color: #f3efe1;
     /*border-left: 10px solid #5BB05B;*/
     /*border-right: 10px solid #5BB05B;*/
+    /*border-bottom: 10px solid #5BB05B;*/
     /*border: 10px solid #5BB05B;*/
-    padding-top: 10px;
+    padding-top: 20px;
     width: 100%;
-    margin-right: 0px;
+    /*margin-left: -10px;*/
+    /*margin-right: -10px;*/
 }
 
 .tr {
@@ -591,7 +594,7 @@ label:hover ~ input {
     border: 5px solid #5BB05B;
     background-color: #f3efe1;
     color: rgb(0, 0, 0);
-    overflow:scroll;
+    overflow: scroll;
     font-size: 110%;
 }
 
@@ -676,6 +679,10 @@ label:hover ~ input {
     .titleTr {
         width:31%;
     }
+
+    #tr3 {
+        border-right: none !important;
+    }
 }
 
 @media (max-width: 1024px) {
@@ -702,6 +709,10 @@ label:hover ~ input {
     }
     .titleTr {
         width:48%;
+    }
+
+    #tr2, #tr3 {
+        border-right: none !important;
     }
 }
 
@@ -779,10 +790,15 @@ label:hover ~ input {
 
     .container {
         margin-top: 48px;
+        margin-bottom: 100%;
     }
 
     .titleTr {
         top: 45px;
+    }
+
+    #tr1, #tr2, #tr3 {
+        border-right: none !important;
     }
 }
 
